# noad

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.en  TODO  allnewnoad  allnoad  allnoadnice  allnoaduncut  audiotools.cpp  audiotools.h  autogen.sh  cchecklogo.cpp  cchecklogo.h  ccontrol.cpp  ccontrol.h  cgetlogo.cpp  cgetlogo.h  channels.h  checkAllMarks  checkmarks.cpp  clearlogos  config.h.in  configure  configure.ac  ctoolbox.cpp  ctoolbox.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  libmpeg2_decoder.cpp  libmpeg2_decoder.h  main.cpp  markpics.cpp  mpeg2wrap.cpp  mpeg2wrap.h  mpeg2wrap_ffmpeg.h  (+22 more)
noad_scripts/: README  countnoad.sh  reccmds.conf  startnoad.sh  stopnoad.sh  viewmarks.sh
